--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+}
+
+body {
+  border: 1px solid grey;
+}
+
+p {
+  margin: 0;
 }
 
 .logo {
@@ -38,4 +48,19 @@
 
 .read-the-docs {
   color: #888;
+}
+
+@media print {
+  /* General body styles for printing */
+  body {
+    margin: 0;
+    padding: 0;
+    width: 210mm;
+    height: 297mm;
+    box-sizing: border-box;
+    border: none;
+  }
+  @page {
+    size: A4 portrait;
+  }
 }
